# nescience-zkvm-testing

./: LICENSE  README.md
nexus/: README.md
nexus/mem_alloc_vec_test/: Cargo.toml
nexus/mem_alloc_vec_test/src/: main.rs
nexus/simple_arithmetic_test/: Cargo.toml
nexus/simple_arithmetic_test/src/: main.rs
risc0/: README.md
risc0/benchmark_tests/: main.rs  mod.rs
risc0/benchmark_tests/bench_programs/: mem_bench.rs  perf_bench.rs  simple_arithmetic_test.rs
risc0/benchmark_tests/guest_programs/: mem_alloc_vec_test.rs  simple_arithmetic_test.rs
risc0/scripts_and_tools/: risc0_bench_arithmetic.sh  risc0_bench_memory.sh  risc0_setup.sh
shared/memory_allocations/: Cargo.toml
shared/memory_allocations/src/: lib.rs
sp1/: README.md
sp1/mem_alloc_vec_test/lib/: Cargo.toml
sp1/mem_alloc_vec_test/lib/src/: lib.rs
sp1/mem_alloc_vec_test/program/: Cargo.toml
sp1/mem_alloc_vec_test/program/src/: main.rs
sp1/mem_alloc_vec_test/script/: Cargo.toml
sp1/simple_arithmetic_test/elf/: riscv32im-succinct-zkvm-elf
sp1/simple_arithmetic_test/lib/: Cargo.toml
sp1/simple_arithmetic_test/program/: Cargo.toml
sp1/simple_arithmetic_test/script/: Cargo.toml
valida/: README.md
valida/scripts_and_tools/: build-rust.sh  valida_prove.sh  valida_setup.sh  valida_verify.sh
valida/tests/: empty_test.rs  simple_arithmetic_test.rs
zkmips/: README.md
zkmips/scripts_and_tools/: README.md  zkmips_bench.sh  zkmips_build.sh  zkmips_setup.sh
zkmips/tests/mem_alloc_vec_test/: Cargo.toml  rust-toolchain.toml
zkmips/tests/simple_arithmetic_test/: Cargo.toml
zkmips/tests/zkmips_tester/: Cargo.toml
zkwasm/: README.md
zkwasm/scripts_and_tools/: zkwasm_build.sh  zkwasm_prove.sh  zkwasm_setup.sh  zkwasm_setup_circuit.sh  zkwasm_verify.sh
zkwasm/tests/mem_alloc_vec_test/: Cargo.toml
zkwasm/tests/mem_alloc_vec_test/src/: lib.rs
zkwasm/tests/simple_arithmetic_test/: Cargo.toml
(+8 files in other folders)
