[package]
version = "0.1.0"
name = "mem_alloc_vec_test-script"
edition = "2021"
default-run = "mem_alloc_vec_test"

[[bin]]
name = "mem_alloc_vec_test"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[dependencies]
sp1-sdk = "1.2.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
mem_alloc_vec_test-lib = { path = "../lib" }

[build-dependencies]
sp1-helper = "1.2.0"
