[package]
version = "0.1.0"
name = "simple_arithmetic_test-script"
edition = "2021"
default-run = "simple_arithmetic_test"

[[bin]]
name = "simple_arithmetic_test"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[dependencies]
sp1-sdk = "1.2.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
simple_arithmetic_test-lib = { path = "../lib" }

[build-dependencies]
sp1-helper = "1.2.0"
